Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current svn
===========
 o #15293 Fix for SOCKET protocol layer to transform all weired, client thrown exceptions into a "user.update.internalError"
          instead of a "internal.unkown", as correctly done by IOR protocol

 o #15280, #15288-#15290 Bugfix in xmlBlaster server-core (TopicHandler)
          Major redesign to handle race conditions:
          All access to a TopicHandler instance is no single threaded and done over TopicAccessor
          All access over reference counting / weak references is done as 'dirty read'
          Fixed double TopicHandler unregister on erase(false)

 o #15261 JMX invocations: Fixed invocation with none-String arguments, see
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/admin.http.html#jmx

 o #15256 Fixed switching off erase notification, added test case
          Thanks to Brad Clements for reporting

 o #15250 XmlRpc callback (server side): Fixed recognition of COMMUNICATION errorCode
          to avoid going to DEAD when callback server of client disappeared temporary

 o #15244 EventPlugin: Added fix to only send JMX events when configured

 o #15234 Added java client side API methods for synchronous access:
          Access xmlBlaster server side queues
            MsgUnit[] receive(String oid, int maxEntries, long timeout, boolean consumable)
          The synchrnous request/reply pattern
            MsgUnit[] request(MsgUnit msgUnit, long timeout, int maxEntries)
          See I_XmlBlasterAccess.java

 o #15220 Added possibility to configure to send XmlBlaster script markup over the SOCKET protocol layer
          with all benefits like tunneling back, compression and SSL
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/protocol.socket.html#script
          Fixed propress listener reporting in XbfParser.java
 